Fixed waffle in votelog info popup for ipad size and fixed z-index

--- a/src/components/waffle.css
+++ b/src/components/waffle.css
@@ -35,6 +35,7 @@
 
 @media only screen and (max-width: 950px) {
   .waffle {
+    max-width: 348px !important;
     width: 348px;
     height: 750px;
   }
